files/nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: <namespace>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: app
        image: sonatype/nexus3
        volumeMounts:
        - mountPath: "/sonatype-work"
          name: nexus-volume
        - mountPath: "/nexus-data"
          name: nexus-volume
      volumes:
        - name: nexus-volume
          persistentVolumeClaim:
            claimName: nexus
---
# Optional for Traefik
# Expose base nexus
apiVersion: v1
kind: Service 
metadata:
    name: nexus
    namespace: <namespace>
spec:
    selector:
        app: nexus
    type: ClusterIP
    ports:
    - port: 8081
---
# Optional for Traefik
# Expose Docker
apiVersion: v1
kind: Service
metadata:
    name: nexus-docker
    namespace: <namespace>
spec:
    selector:
        app: nexus
    type: ClusterIP
    ports:
    - port: 5001
