files/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-routing
    namespace: <your-namespace>
spec:
    ingressClassName: traefik
    rules:
    - host: "<domain>"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: <service-name>
              port:
                number: 80
